# surfer

./: .codespellrc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MultiSignalChangeList.md  MultiSignalStagePlan.md  README.md  SignalAnalysis.md  SignalAnalysisStagePlan.md  TablePerf.md  TableWidget.md  WaveClipIssue.md  about.toml  book.toml  build.rs  default_config.toml  default_shortcuts.toml  default_theme.toml  package-lock.json  review.txt  surfer.sh  test.sucl  test.surf.ron  update_spade_test.bash  wcp.md
.github/workflows/: deploy-gh-pages.yml
.gitlab/issue_templates/: default.md
.work-items/export-waveform/: design.md  export_image_counter.sucl  task-ui-export.md  user-story.md
.work-items/png-export/: 01_create_export_module.md  02_integrate_export_into_libsurfer.md  03_add_cli_argument.md  04_add_integration_test.md  design.md  epic.md  task-headless-export.md  task-ui-export.md  task.md  user-story.md
docs/: README.md  SUMMARY.md  analog.md  cursors.md  features.md  mousegestures.md  remote.md
docs/commands/: README.md
docs/configuration/: README.md
docs/configuration/themes/: builtin.md
docs/development/: README.md
docs/plugins/: README.md  decoders.md  installing_plugins.md  mapping.md  mnemonic.md  writing_plugins.md
examples/: analog.vcd  analog_ieee_inf_nan.vcd  analog_negative.vcd  analog_pulses.vcd  analog_scaling_modes.vcd  analog_signals_short.vcd  event.vcd  events.vcd  export_image_counter.sucl  fst_types.fst  hexadecimal.py  my_db.ron  nested_event_scopes.vcd  perioding_gen.py  pulses.vcd  script_running_script.sucl  spade.vcd  vcd_extensions.vcd  wasm_example_translator.wasm  with_1_bit.vcd
fzcmd/: Cargo.toml  LICENSE-MIT.txt
fzcmd/src/: lib.rs
libsurfer/: Cargo.toml
libsurfer/src/: analog.rs  analog_renderer.rs  analog_signal_cache.rs  analysis.rs  async_util.rs  batch_commands.rs  benchmark.rs  channels.rs  clock_highlighting.rs  command_parser.rs  command_prompt.rs  config.rs  cxxrtl_container.rs  data_container.rs  dialog.rs  displayed_item.rs  displayed_item_tree.rs  drawing_canvas.rs  export.rs  export_waveform.rs  file_dialog.rs  file_history.rs  file_watcher.rs  fzcmd.rs  graphics.rs  help.rs  hierarchy.rs  icons.rs  keyboard_shortcuts.rs  keys.rs  lib.rs  logs.rs  marker.rs  menus.rs  message.rs  mousegestures.rs  overview.rs  search.rs  server_file_window.rs  signal_rmq.rs  (+30 more)
libsurfer/src/cxxrtl/: channels.rs  command.rs  io_worker.rs  mod.rs  query_container.rs  sc_message.rs  timestamp.rs
libsurfer/src/remote/: client.rs  mod.rs
libsurfer/src/table/: cache.rs  mod.rs  model.rs  tests.rs  view.rs
libsurfer/src/table/cache/: builder.rs  clipboard.rs  mod.rs  state.rs
libsurfer/src/table/sources/: mod.rs  multi_signal_change_list.rs  multi_signal_index.rs  signal_analysis.rs  signal_change_list.rs  signal_formatting.rs  transaction_trace.rs  virtual_model.rs
libsurfer/src/table/tests/: analysis_and_filter_draft.rs  mod.rs  model_and_cache.rs  multi_signal.rs  scroll_columns.rs  selection_navigation_clipboard.rs  support.rs  transaction_trace.rs
libsurfer/src/tests/: export.rs  export_png.rs  export_waveform.rs  format_detection.rs  mod.rs  remote.rs  snapshot.rs  wcp.rs  wcp_tcp.rs
libsurfer/src/translation/: basic_translators.rs  clock.rs  color_translators.rs  enum_translator.rs  event.rs  event_translator.rs  fixed_point.rs  instruction_translators.rs  mapping_translators.rs  mnemonic_translators.rs  mod.rs  numeric_translators.rs  python_translators.rs  spade.rs  wasm_basic_translator.rs  wasm_translator.rs
libsurfer/src/wcp/: cs_message.rs  mod.rs  proto.rs  sc_message.rs  wcp_handler.rs  wcp_server.rs
misc/: release_checklist.md
python/: README.md  pyproject.toml
python/doc/: python-surfer.rst
python/src/python_surfer/: __init__.py  wcpclient.py  wcpmessage.py
python/tests/: test_compare_implementations.py  test_wcpclient.py
surfer/: Cargo.toml  Trunk.toml  build.rs
surfer-translation-types/: Cargo.toml
surfer-translation-types/src/: lib.rs  plugin_types.rs  python.rs  result.rs  scope_ref.rs  translator.rs  variable_index.rs  variable_meta.rs  variable_ref.rs
surfer-vscode/: .eslintrc.json  .gitignore  CHANGELOG.md  README.md  build_extension.sh  package-lock.json  prepare.py
surfer-vscode/extension/: .prettierrc  package-in.json  package-lock.json  tsconfig.json
surfer-vscode/extension/src/: surferWaveformViewer.ts
surfer-waveform/: Cargo.toml  pyproject.toml
surfer-waveform/src/: lib.rs  python.rs  registry.rs
surfer-wcp/: Cargo.toml
surfer-wcp/src/: proto.rs
surfer/assets/: com.gitlab.surferproject.surfer.desktop  integration.js
surfer/src/: command_prompt.rs  config.rs  displayed_item.rs  drawing_canvas.rs  file_watcher.rs  hierarchy.rs  main.rs  menus.rs  message.rs  mousegestures.rs  svloader.rs  view.rs  wasm_util.rs  wave_container.rs  wave_source.rs
surfer/src/tests/: mod.rs  snapshot.rs  wcp.rs
surfer/src/translation/: enum_translator.rs  mod.rs  spade.rs
surver/: Cargo.toml  build.rs
surver/src/: lib.rs  main.rs  server.rs
surver/tests/: reload.rs  server_integration.rs
themes/: dark-high-contrast.toml  dracula.toml  ibm.toml  light+.toml  light-high-contrast.toml  okabe-ito.toml  petroff-dark.toml  petroff-light.toml  solarized.toml
translator-docs/: Cargo.toml
translator-docs/src/: lib.rs
wasm_example_translator/: Cargo.toml
wasm_example_translator/src/: lib.rs
