[workspace]
resolver = "2"

members = ["surfer", "surfer-translation-types", "surver"]
exclude = [
  ".cache",              # include such that packages downloaded into the CI cache are ignored
  "f128",
  "fzcmd",
  "instruction-decoder",
]
default-members = ["surfer", "surver", "libsurfer"]

[workspace.package]
version = "0.4.0-dev"
license = "EUPL-1.2"
categories = ["development-tools::debugging", "science"]
edition = "2021"
rust-version = "1.82"
repository = "https://gitlab.com/surfer-project/surfer/"

[profile.release]
opt-level = 3 # fast and small wasm
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
debug = false

[workspace.dependencies]
surfer = { path = "surfer", default-features = false }
surver = { path = "surver", default-features = false }

base64 = "0.22"
bincode = "1.3.3"
bytesize = "1.3.0"
camino = { version = "1.1.6", features = ["serde1"] }
clap = { version = "4.5.23", features = ['derive'] }
color-eyre = "0.6.3"
config = { version = "0.15.4", default-features = false, features = ["toml"] }
derive_more = { version = "1.0", default-features = false, features = [
  "add",
  "add_assign",
  "mul",
  "display",
  "not",
  "debug"
] }
ecolor = "0.30"
emath = "0.30"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = { version = "0.30", default-features = false, features = ["serde"] }
egui-remixicon = { version = "0.29.1", default-features = false }
egui_extras = { version = "0.30", default-features = false }
egui_plot = "0.30"
epaint = "0.30"
fern = { version = "0.7.1", features = ["colored"] }
ftr_parser = "0.1.2"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
fuzzy-matcher = "0.3.7"
fzcmd = { path = "fzcmd" }
half = "2.4.1"
instruction-decoder = { path = "instruction-decoder" }
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
lz4_flex = "0.11.3"
num = { version = "0.4", features = ["serde"] }
pyo3 = { version = "0.21.2", features = ["auto-initialize", "abi3"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.11", features = ["stream"] }
rfd = { version = "0.15.0", default-features = false, features = ["tokio", "xdg-portal"] }
ron = { version = "0.8.1", features = ["integer128"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sys-locale = "0.3.1"
toml = { version = "0.8.12", default-features = false, features = ["parse"] }
tokio = { version = "1.42", features = ["rt", "time", "macros"] }
wasm-bindgen-futures = "0.4"
web-time = "1.1.0"
wellen = { version = "0.13.6", features = ["serde1"] }
