[workspace]
resolver = "2"

members = [
    "surfer",
    "surfer-translation-types",
    "surver",
    "translator-docs",
    "wasm_example_translator",
]
exclude = [".cache", "f128", "instruction-decoder"]
default-members = ["surfer", "surver", "libsurfer"]

[workspace.package]
version = "0.6.0-dev"
license = "EUPL-1.2"
categories = ["development-tools::debugging", "science"]
edition = "2024"
rust-version = "1.90"
repository = "https://gitlab.com/surfer-project/surfer/"

[workspace.dependencies]

base64 = "0.22"
bincode = "1.3.3"
bytes = "1.11"
bytesize = "2.3.1"
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.31", default-features = false }
clap = { version = "4.5.53", features = ['derive'] }
config = { version = "0.15.8", default-features = false, features = ["toml"] }
derive_more = { version = "2.1", default-features = false, features = [
    "add",
    "add_assign",
    "from_str",
    "mul",
    "display",
    "not",
    "debug",
] }
ecolor = { version = "0.33", features = ["serde"] }
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = { version = "0.33", default-features = false, features = ["serde"] }
egui-remixicon = { version = "0.29.1", default-features = false }
egui_extras = { version = "0.33", default-features = false }
egui_plot = "0.34"
emath = "0.33"
enum-iterator = "2.1"
epaint = "0.33"
eyre = "0.6.12"
fern = { version = "0.7.1", features = ["colored"] }
ftr_parser = "0.2.0"
futures = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
fuzzy-matcher = "0.3.7"
half = "2.5"
image = { version = "0.25", default-features = false, features = ["png"] }
instruction-decoder = { path = "instruction-decoder" }
itertools = "0.14.0"
leb128 = "0.2.5"
local-impl = "0.1.2"
lz4_flex = "0.12"
num = { version = "0.4", features = ["serde"] }
numeric-sort = "0.1.4"
pure-rust-locales = "0.8.1"
pyo3 = { version = "0.27.2", features = ["auto-initialize", "abi3"] }
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.13.1", features = ["stream"] }
rfd = { version = "0.16", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
ron = { version = "0.12", features = ["integer128"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
simple-eyre = "0.3.1"
softposit = "0.4.0"
surfer = { path = "surfer", default-features = false }
surver = { path = "surver", default-features = false }
sys-locale = "0.3.2"
thiserror = "2"
tokio = { version = "1.43", features = ["rt", "time", "macros"] }
toml = { version = "0.9.8", default-features = false, features = ["parse"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
vergen-gitcl = "1.0"
wasm-bindgen-futures = "0.4.50"
wasm-tracing = "2.1"
web-time = "1.1.0"
wellen = { version = "0.20.1", features = ["serde1"] }

[profile.release]
opt-level = 3 # fast and small wasm
lto = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
debug = true
