[package]
name = "surfer-waveform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true

[lib]
name = "surfer_waveform"
# This enables both static lib (for standalone) and cdylib (for Python)
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
ecolor.workspace = true
pyo3.workspace = true
surfer-translation-types = { path = "../surfer-translation-types" }
