
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "surfer_waveform"
dynamic = ["license", "version", "authors"]
description = "Python-extension to debug Surfer translators"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[tool.maturin]
features = ["pyo3/extension-module"]
# python-source = "python"
