[package]
name = "surfer-wcp"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Waveform Control Protocol (WCP) bindings for remote controlling waveform viewers"


[dependencies]
num.workspace = true
serde.workspace = true
serde_json.workspace = true
