[package]
name = "surfer"
version.workspace = true
license.workspace = true
categories.workspace = true
edition.workspace = true
rust-version = "1.76"

[dependencies]
clap.workspace = true
camino.workspace = true
color-eyre.workspace = true
eframe.workspace = true
egui.workspace = true
libsurfer.path ="../libsurfer"
log.workspace = true
tokio.workspace = true
ron.workspace=true
surver.path = "../surver"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[features]
accesskit = ["eframe/accesskit", "eframe/web_screen_reader"]
