[package]
name = "surver"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
rust-version = "1.90"
description = "Server for the Surfer waveform viewer"
repository.workspace = true
build = "build.rs"

[dependencies]
bincode.workspace = true
bytesize.workspace = true
clap.workspace = true
chrono = { workspace = true, features = ["alloc"] }
eyre.workspace = true
leb128.workspace = true
lz4_flex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-time.workspace = true
wellen.workspace = true

[build-dependencies]
vergen-gitcl = { workspace = true, features = ["build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand = "2.3.0"
http-body-util = "0.1.2"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1.6", features = ["tokio"] }
tokio = {workspace = true, features = ["net"]}
whoami = "1.5.1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "macros", "rt-multi-thread"] }
reqwest = { workspace = true }
filetime = "0.2"
