[package]
name = "surver"
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
rust-version = "1.90"
description = "Server for the Surfer waveform viewer"
repository.workspace = true
build = "build.rs"

[dependencies]
bincode.workspace = true
bytesize.workspace = true
clap.workspace = true
chrono = { workspace = true, features = ["alloc"] }
eyre.workspace = true
leb128.workspace = true
lz4_flex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
web-time.workspace = true
wellen.workspace = true

[build-dependencies]
vergen-gitcl = { workspace = true, features = ["build"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fastrand.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
tokio = {workspace = true, features = ["net"]}
whoami.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "time", "macros", "rt-multi-thread"] }
reqwest.workspace = true
filetime.workspace = true
